// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`class-diagram → drawio matches snapshot 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<mxfile host="dex">
  <diagram id="diagram-1" name="Class Diagram">
    <mxGraphModel pageWidth="800" pageHeight="600" background="#ffffff">
      <root>
        <mxCell id="0"/>
        <mxCell id="1" parent="0"/>
        <mxCell id="s1" value="Animal" style="shape=table;;fillColor=#dae8fc;strokeColor=#000000;fontColor=#000000;strokeWidth=1;dashed=0;opacity=100;fontSize=12;whiteSpace=wrap;html=1;" vertex="1" parent="1"><mxGeometry x="100" y="100" width="160" height="80" as="geometry"/></mxCell>
        <mxCell id="s3" value="Dog" style="shape=table;;fillColor=#d5e8d4;strokeColor=#000000;fontColor=#000000;strokeWidth=1;dashed=0;opacity=100;fontSize=12;whiteSpace=wrap;html=1;" vertex="1" parent="1"><mxGeometry x="100" y="280" width="160" height="80" as="geometry"/></mxCell>
        <mxCell id="s5" value="extends" style="edgeStyle=orthogonalEdgeStyle;strokeColor=#000000;strokeWidth=1;dashed=0;endArrow=open;startArrow=none;html=1;" edge="1" source="s1" target="s3" parent="1"><mxGeometry relative="1" as="geometry"><Array as="points"><mxPoint x="180" y="180"/><mxPoint x="180" y="280"/></Array></mxGeometry></mxCell>
      </root>
    </mxGraphModel>
  </diagram>
</mxfile>"
`;

exports[`class-diagram → mermaid matches snapshot 1`] = `
"classDiagram
  class Animal
  class Dog
  Animal --> Dog : extends"
`;

exports[`class-diagram → plantuml matches snapshot 1`] = `
"@startuml
class "Animal" as n1
class "Dog" as n3
n1 --> n3 : extends
@enduml"
`;

exports[`flowchart → drawio matches snapshot 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<mxfile host="dex">
  <diagram id="diagram-1" name="My Flow">
    <mxGraphModel pageWidth="800" pageHeight="600" background="#ffffff">
      <root>
        <mxCell id="0"/>
        <mxCell id="1" parent="0"/>
        <mxCell id="s1" value="Start" style="rounded=0;;fillColor=#ffffff;strokeColor=#000000;fontColor=#000000;strokeWidth=1;dashed=0;opacity=100;fontSize=12;whiteSpace=wrap;html=1;" vertex="1" parent="1"><mxGeometry x="100" y="50" width="120" height="60" as="geometry"/></mxCell>
        <mxCell id="s3" value="" style="rhombus;;fillColor=#ffe6cc;strokeColor=#000000;fontColor=#000000;strokeWidth=1;dashed=0;opacity=100;fontSize=12;whiteSpace=wrap;html=1;" vertex="1" parent="1"><mxGeometry x="100" y="200" width="120" height="80" as="geometry"/></mxCell>
      </root>
    </mxGraphModel>
  </diagram>
</mxfile>"
`;

exports[`flowchart → mermaid matches snapshot 1`] = `
"flowchart TD
  n1[Start]
  n3{ }"
`;

exports[`flowchart → plantuml matches snapshot 1`] = `
"@startuml
!pragma layout smetana
rectangle n1 as "Start"
diamond n3 as "n3"
@enduml"
`;

exports[`sequence → drawio matches snapshot 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<mxfile host="dex">
  <diagram id="diagram-1" name="Sequence Diagram">
    <mxGraphModel pageWidth="800" pageHeight="600" background="#ffffff">
      <root>
        <mxCell id="0"/>
        <mxCell id="1" parent="0"/>
        <mxCell id="s1" value="Alice" style="shape=mxgraph.uml.lifeline;;fillColor=#dae8fc;strokeColor=#000000;fontColor=#000000;strokeWidth=1;dashed=0;opacity=100;fontSize=12;whiteSpace=wrap;html=1;" vertex="1" parent="1"><mxGeometry x="100" y="50" width="100" height="300" as="geometry"/></mxCell>
        <mxCell id="s3" value="Bob" style="shape=mxgraph.uml.lifeline;;fillColor=#d5e8d4;strokeColor=#000000;fontColor=#000000;strokeWidth=1;dashed=0;opacity=100;fontSize=12;whiteSpace=wrap;html=1;" vertex="1" parent="1"><mxGeometry x="300" y="50" width="100" height="300" as="geometry"/></mxCell>
        <mxCell id="s5" value="request" style="edgeStyle=orthogonalEdgeStyle;strokeColor=#000000;strokeWidth=1;dashed=0;endArrow=open;startArrow=none;html=1;" edge="1" source="s1" target="s3" parent="1"><mxGeometry relative="1" as="geometry"><Array as="points"><mxPoint x="150" y="150"/><mxPoint x="300" y="150"/></Array></mxGeometry></mxCell>
      </root>
    </mxGraphModel>
  </diagram>
</mxfile>"
`;

exports[`sequence → mermaid matches snapshot 1`] = `
"sequenceDiagram
  participant Alice
  participant Bob
  Alice ->> Bob: request"
`;

exports[`sequence → plantuml matches snapshot 1`] = `
"@startuml
participant "Alice" as n1
participant "Bob" as n3
n1 -> n3 : request
@enduml"
`;
